# endnote-mcp

./: CITATION.cff  LICENSE  README.md  pyproject.toml  server.json
src/endnote_mcp/: citation.py  cli.py  config.py  db.py  embeddings.py  pdf_indexer.py  search.py  server.py
tests/: test_search.py
