[project]
name = "endnote-mcp"
version = "1.0.0"
description = "Connect your EndNote reference library to Claude AI — search, cite, and read PDFs directly in conversations"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Gokhan Gokmen" },
]
keywords = [
    "endnote", "mcp", "claude", "references", "citation",
    "academic", "research", "literature", "pdf", "bibliography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "lxml>=5.0",
    "PyMuPDF>=1.24",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/gokmengokhan/endnote-mcp"
Documentation = "https://github.com/gokmengokhan/endnote-mcp#readme"
Repository = "https://github.com/gokmengokhan/endnote-mcp"
Issues = "https://github.com/gokmengokhan/endnote-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
endnote-mcp = "endnote_mcp.cli:main"
